--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -20,7 +20,30 @@
 }
 
 body {
+  text-align: center;
   background: var(--background);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
+  margin: 0;
+}
+
+
+h1 {
+  font-size: 30px;
+}
+
+h2 {
+  font-size: 26px;
+}
+
+h3 {
+  font-size: 22px;
+}
+
+h1 {
+  font-size: 18px;
+}
+
+p {
+  font-size: 16px;
 }
